--- a/style.css
+++ b/style.css
@@ -4,24 +4,37 @@
     box-sizing: border-box;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
 header {
+    display: flex;
     background-color: rgb(157, 213, 213);
     color: rgb(73, 66, 66);
+    justify-content: center;
     text-align: center;
     padding: 2%;
+}
+
+.items {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    gap: 5vh;
 }
 
 section {
     width: 50vw;
     background-color: rgb(218, 184, 236);
-    margin: 2% auto;
     padding: 4%;
-    text-align: center;
     color: rgb(73, 66, 66);
+    text-align: center;
 }
 
 li {
-    margin-top: 2%;
+    padding-top: 2vh;
     list-style-type: none;
 }
 
@@ -29,6 +42,22 @@ footer {
     background-color: rgb(60, 54, 54);
     color: whitesmoke;
     font-weight: bold;
+    display: flex;
+    gap: 2vh;
+    padding: 2vh;
+    text-align: center;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.instagram {
+    display: flex;
+    gap: 1vw;
+}
+
+.github {
+    display: flex;
+    gap: 1vw;
 }
 
 a {
@@ -36,24 +65,61 @@ a {
     font-weight: bolder;
 }
 
+a:hover {
+    color: rgb(21, 20, 20);
+    background-color: white;
+}
+
 .nome {
     font-weight: bold;
 }
 
 .area-pesquisa {
-    margin-top: 4%;
+    padding-top: 4vh;
     font-style: italic;
 }
 
 .input-botao {
-    margin: 1%;
+    padding: 2vh;
 }
 
-.github {
-    margin-left: 85%
+.img-katie {
+    max-width: 40vw;
+    max-height: 50vh;
+    width: auto;
+    height: auto;
 }
-   
-a:hover {
-    color: rgb(21, 20, 20);
-    background-color: white;
+
+.img-ada {
+    max-width: 40vw;
+    max-height: 40vh;
+    width: auto;
+    height: auto;
+}
+
+.img-marie {
+    max-width: 40vw;
+    max-height: 40vh;
+    width: auto;
+    height: auto;
+}
+
+.img-jaqueline {
+    max-width: 40vw;
+    max-height: 40vh;
+    width: auto;
+    height: auto;
+}
+
+.img-hedy {
+    max-width: 40vw;
+    max-height: 50vh;
+    width: auto;
+    height: auto;
+}
+
+@media screen and (max-device-width: 800px) {
+    section {
+        width: 65vw;
+    }
 }
