--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* @font-face {
+    font-family: "brielle";
+    src: url(./media/brielle.otf);
+ } */
+
 * {
     margin: 0;
     padding: 0;
@@ -7,30 +12,75 @@
 .container {
     display: flex;
     flex-direction: column;
+    font-family: georgia;
+    font-size: 90%;
+    background-color: #F2E9E4; 
+}
+
+nav {
+    background-color: #0D0D0D;
+}
+
+main {
+    padding-bottom: 5vh;
 }
 
 header {
+    font-family: 'brielle';
+    font-size: larger;
     display: flex;
-    background-color: rgb(157, 213, 213);
-    color: rgb(73, 66, 66);
+    background-color: #F2D4C2;
+    color: #0D0D0D;
     justify-content: center;
     text-align: center;
     padding: 2%;
 }
 
-.items {
+.input-botao {
+    display: flex;
+    justify-content: end;
+    gap: 1vw;
+    padding: 2vh;
+    align-items: center;
+    color: #F2E9E4;
+    font-size: medium;
+}
+
+input {
+    text-align: center;
+    width: 15vw;
+    height: 4vh;
+    border: 0.06rem solid;
+    border-radius: 0.3rem 0 0 0.3rem;
+    box-shadow: 0.1rem 0.1rem 0.4rem #a9a7a7;
+}
+
+button {
+    background-color: #F2E9E4;
+    color: rgb(74, 74, 74);
+    padding: 0.3rem;
+    border-radius: 0 0.3rem 0.3rem 0;
+}
+
+.itens {
     display: grid;
     justify-content: center;
     align-items: center;
     gap: 5vh;
+    padding-top: 5vh;
 }
 
-section {
+
+ul {
     width: 50vw;
-    background-color: rgb(218, 184, 236);
+    background-color: #F2C4C8;
     padding: 4%;
-    color: rgb(73, 66, 66);
+    color: #0D0D0D;
     text-align: center;
+}
+
+ul:hover {
+    background-color: #F2AEBB;
 }
 
 li {
@@ -38,40 +88,15 @@ li {
     list-style-type: none;
 }
 
-footer {
-    background-color: rgb(60, 54, 54);
-    color: whitesmoke;
-    font-weight: bold;
-    display: flex;
-    gap: 2vh;
-    padding: 2vh;
-    text-align: center;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.instagram {
-    display: flex;
-    gap: 1vw;
-}
-
-.github {
-    display: flex;
-    gap: 1vw;
-}
-
-a {
-    color: whitesmoke;
+.link-nome {
+    text-decoration: none;
+    color: #F2E9E4;
     font-weight: bolder;
 }
 
-a:hover {
-    color: rgb(21, 20, 20);
-    background-color: white;
-}
-
-.nome {
-    font-weight: bold;
+.link-nome:hover {
+    color: #0D0D0D;
+    background-color: #F2E9E4;
 }
 
 .area-pesquisa {
@@ -79,43 +104,28 @@ a:hover {
     font-style: italic;
 }
 
-.input-botao {
+.imagem-1 {
+    max-width: 40vw;
+    max-height: 40vh;
+    width: auto;
+    height: auto;
+}
+
+footer {
+    background-color: #0D0D0D;
+    color: #F2E9E4;
+    display: flex;
+    gap: 2vh;
     padding: 2vh;
+    text-align: center;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
 }
 
-.img-katie {
-    max-width: 40vw;
-    max-height: 50vh;
-    width: auto;
-    height: auto;
-}
-
-.img-ada {
-    max-width: 40vw;
-    max-height: 40vh;
-    width: auto;
-    height: auto;
-}
-
-.img-marie {
-    max-width: 40vw;
-    max-height: 40vh;
-    width: auto;
-    height: auto;
-}
-
-.img-jaqueline {
-    max-width: 40vw;
-    max-height: 40vh;
-    width: auto;
-    height: auto;
-}
-
-.img-hedy {
-    max-width: 40vw;
-    max-height: 50vh;
-    width: auto;
-    height: auto;
+.redes-sociais {
+    display: flex;
+    gap: 0.5vw;
 }
 
 @media screen and (max-device-width: 800px) {
